Fixed line height issue on mobile
Chrome on Android renders text at the wrong size when font-size-adjust
is used and system font scale is not 100%.

--- a/Serifu.Web/Assets/global.css
+++ b/Serifu.Web/Assets/global.css
@@ -23,6 +23,7 @@
   font-optical-sizing: auto;
   font-synthesis: none;
   font-variant-numeric: oldstyle-nums; /* Default for Merriweather, specified for fallback */
+  text-size-adjust: none;
   line-height: 1.6;
   color: #f2f2f2;
   visibility: visible !important;
